[package]
name = "art-station-i-guess"
version = "0.80.43"
authors = [
  "Billie Thompson <billie+art-station-i-guess@billiecodes.com>"
]
edition = "2018"
description = "I needed to get some new wallpaper for my desktop so I made this throwaway script to download art from art station automatically rather than manually."
license = "Creative Commons Zero v1.0 Universal"
repository = "https://github.com/PurpleBooth/art-station-i-guess/"
readme = "README.md"
keywords = [ "art station", "download", "web-programming::http-client" ]
categories = [ "command-line-utilities" ]

[dependencies]
pin-project = "1.0.4"
clap = "2.33.3"
futures = "0.3.12"

  [dependencies.reqwest]
  version = "0.11.0"
  features = [ "json" ]

  [dependencies.tokio]
  version = "1.0.1"
  features = [ "full" ]

  [dependencies.serde]
  version = "1.0.119"
  features = [ "derive" ]

[dev-dependencies]
itertools = "0.10.0"
pretty_assertions = "0.6.1"
tempfile = "3.2.0"
